<resources>
    <string name="app_name">GoStudy</string>
    <string name="homepage">Beranda</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="notification">Notifikasi</string>
    <string name="classes">Kelas</string>
    <string name="course">Kursus</string>
    <string name="account">Akun</string>
    <string name="my_profile_text">Profil Saya</string>
    <string name="history_text">Riwayat Pembayaran</string>
    <string name="change_password_text">Ubah Password</string>
    <string name="logout_text">Keluar</string>
    <string name="version">Versi 1.1.0</string>
    <string name="form_name">Nama</string>
    <string name="form_email">Email</string>
    <string name="form_password">Password</string>
    <string name="form_phone_number">Nomor Telepon</string>
    <string name="form_country">Negara</string>
    <string name="form_city">Kota</string>
    <string name="save">Simpan</string>
    <string name="text_login">Login</string>
    <string name="text_emailortelp">Email / Nomor Telepon</string>
    <string name="text_password">Password</string>
    <string name="text_lupakatasandi">Lupa Kata Sandi</string>
    <string name="text_daftar_disini">Daftar Disini</string>
    <string name="text_belum_punya_akun_daftar_disini">Belum Punya Akun? Daftar Disini</string>
    <string name="text_register">Daftar</string>
    <string name="text_name">Nama</string>
    <string name="text_buat_password">Buat Password</string>
    <string name="text_daftar">Daftar</string>
    <string name="form_old_password">Masukkan Password Lama</string>
    <string name="form_new_password">Masukkan Password Baru</string>
    <string name="form_confirm_new_password">Ulangi Password Baru</string>
    <string name="save_password_text">Simpan Password</string>
    <string name="want_to_logout_text">Apakah anda yakin ingin logout?</string>
    <string name="no">Tidak</string>
    <string name="yes">Ya</string>
    <string name="txt_tittle_class">UI/UX Design</string>
    <string name="txt_search_best_course">Cari Kursus Terbaik…</string>
    <string name="txt_running_class">Kelas Berjalan</string>
    <string name="txt_all">All</string>
    <string name="txt_intermediate_level">Intermediate Level</string>
    <string name="txt_7_modul">7 Modul</string>
    <string name="txt_120_menit">120 menit</string>
    <string name="txt_class_topic">Topik Kelas</string>
    <string name="txt_premium">Premium</string>
    <string name="txt_filter">Filter</string>
    <string name="paid">Selesai Pembayaran</string>
    <string name="waiting_for_payment">Menunggu Pembayaran</string>
    <string name="text_selamat">Selamat!</string>
    <string name="text_harga">Harga</string>
    <string name="text_ppn_11">PPN 11%</string>
    <string name="text_total_bayar">Total Bayar</string>
    <string name="text_ikuti_kelas">Ikuti Kelas</string>
    <string name="text_join_class">Bayar dan ikuti kelas Selamanya</string>
    <string name="category_text">Kategori</string>
    <string name="popular_course_text">Kursus Populer</string>
    <string name="view_more_text">Lihat Semua</string>
    <string name="buy">Beli Rp 250.000</string>
    <string name="txt_masuk">Masuk</string>
    <string name="txt_oops">Oops !</string>
    <string name="txt_must_login">Maaf, Anda harus login terlebih dahulu !</string>
    <string name="txt_login">Login</string>
    <string name="text_temukan_ilmu">Temukan Ilmu,</string>
    <string name="text_temukan_keunggulanmu">Temukan Keunggulanmu !</string>
    <string name="text_sudah_punya_akun">Sudah punya akun? Klik Disini</string>
    <string name="text_guest">Guest</string>
    <string name="text_masukkan_otp">Masukkan OTP</string>
    <string name="text_minta_kode_baru_via_email">Minta Kode Baru Via Email</string>
    <string name="txt_start_class">Mulai Kelas</string>
    <string name="text_selangkah_lagi_menuju">Selangkah lagi menuju</string>
    <string name="text_kelas_premium">Kelas Premium</string>
    <string name="text_beli_sekarang">Beli Sekarang</string>
    <string name="repeat_text">Ulangi</string>
    <string name="change_photo_text">Ubah Foto</string>
    <string name="text_about_course">About Course</string>
    <string name="text_join_telegram">Join Group Telegram</string>
    <string name="text_random">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="text_class_indicate">Benefits</string>
    <string name="text_start_with_us">Mari belajar bersama kami!</string>
    <string name="hello_guest">Hello, Guest!</string>
    <string name="text_hello">Hello, %1$s!</string>
    <string name="text_highlight_daftardisini">Daftar Disini</string>
    <string name="text_no_data">Tidak ada data</string>
    <string name="text_error_email_empty">Email harus diisi</string>
    <string name="text_error_email_invalid">Format email tidak valid</string>
    <string name="text_error_password_empty">Password harus diisi</string>
    <string name="text_error_password_less_than_8_char">Password minimal 8 karakter</string>
    <string name="login_failed">Gagal login: %1$s</string>
    <string name="free_class">Kelas Gratis</string>
    <string name="progress_class">In Progress</string>
    <string name="done_class">Selesai</string>
    <string name="text_login_here">Sudah memiliki akun? Login</string>
    <string name="text_error_name_cannot_empty">Nama harus diisi</string>
    <string name="text_error_phone_cannot_empty">Nomor telepon harus diisi\n</string>
    <string name="register_failed">Gagal register : %1$s</string>
    <string name="text_button_submit">Submit</string>
    <string name="text_reset_password">Forgot Password</string>
    <string name="text_reset">Reset</string>
    <string name="verify_failed">Gagal verifikasi OTP: %1$s</string>
    <string name="verify_success">Sukses verifikasi OTP: %1$s</string>
    <string name="txt_modul">Modul</string>
    <string name="txt_menit">Menit</string>
    <string name="txt_paling_baru">Paling Baru</string>
    <string name="txt_paling_populer">Paling Populer</string>
    <string name="txt_promo">Promo</string>
    <string name="txt_kategori">Kategori</string>
    <string name="txt_ui_ux_design">UI/UX Design</string>
    <string name="txt_web_development">Web Development</string>
    <string name="txt_android_development">Android Development</string>
    <string name="txt_data_science">Data Science</string>
    <string name="txt_business_intelligence">Business Intelligence</string>
    <string name="txt_level_kesulitan">Level Kesulitan</string>
    <string name="txt_semua_level">Semua Level</string>
    <string name="txt_beginner_level">Beginner Level</string>
    <string name="txt_intermediate_level_2">Intermediate Level</string>
    <string name="txt_advanced_level">Advanced level</string>
    <string name="text_title_list">Materi belajar</string>
    <string name="text_materi_belajar">Materi belajar</string>
    <string name="txt_mulai_kelas">Mulai Kelas</string>
    <string name="txt_kelas_berjalan">Kelas Berjalan</string>
    <string name="text_pemesanan_gagal">Pemesanan gagal: %1$s</string>
    <string name="tag_dialoghomenonloginfragment">DialogHomeNonLoginFragment</string>
    <string name="txt_sub_title">Belajar Web Designer dengan Figma</string>
    <string name="txt_course_by">by Angela Doe</string>
    <string name="txt_rating">5.0</string>
    <string name="text_free">Gratis</string>
    <string name="text_beli_dan_ikuti_kelas">Beli dan Ikuti kelas</string>
    <string name="text_selesai">Selesai</string>
    <string name="text_done">Done</string>
    <string name="status_in_progress">in_progress</string>
    <string name="status_selesai">selesai</string>
    <string name="txt_in_progress">In Progress: %1$s%</string>
    <string name="tag_filterfragment">filterfragment</string>
    <string name="txt_free">Free</string>
    <string name="txt_beginner">Beginner</string>
    <string name="txt_intermediate">Intermediate</string>
    <string name="txt_blank"></string>
    <string name="txt_advanced">Advanced</string>
    <string name="txt_not_select_anything">Kamu belum memilih apapun!</string>
    <string name="txt_by_s">by %s</string>
    <string name="txt_must_paid">Yuk beli course ini terlebih dahulu!</string>
    <string name="text_detail_pembayaran">Detail Pembayaran</string>
    <string name="text_rincian_pembayaran">Rincian Pembayaran</string>
    <string name="text_order_id">Order Id</string>
    <string name="text_status">Status</string>
    <string name="text_rincian_pesananmu">Rincian Pesananmu</string>
    <string name="text_waktu">Waktu</string>
    <string name="text_url">URL</string>
    <string name="text_order_gagal">Pemesanan gagal: %1$s</string>
    <string name="text_expired">Expired</string>

</resources>