<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/md_theme_light_background"
    android:padding="16dp"
    tools:context=".presentation.account.AccountFragment">

    <TextView
        android:id="@+id/tv_account_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:layout_marginTop="86dp"
        android:fontFamily="@font/montserrat_bold"
        android:shadowColor="@color/md_theme_light_outline"
        android:shadowDx="1"
        android:shadowDy="1"
        android:shadowRadius="2"
        android:text="@string/account"
        android:textColor="@color/md_theme_light_primary"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_my_profile_contain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:padding="16dp"
        app:cardBackgroundColor="@color/md_theme_light_primary"
        app:cardCornerRadius="8dp"
        app:layout_constraintBottom_toTopOf="@id/cv_history_contain"
        app:layout_constraintTop_toBottomOf="@id/tv_account_text">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawablePadding="8dp"
            android:fontFamily="@font/montserrat_regular"
            android:padding="16dp"
            android:text="@string/my_profile_text"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:drawableStartCompat="@drawable/ic_edit_profile" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_history_contain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:padding="16dp"
        app:cardBackgroundColor="@color/md_theme_light_primary"
        app:cardCornerRadius="8dp"
        app:layout_constraintTop_toBottomOf="@id/cv_my_profile_contain">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawablePadding="8dp"
            android:fontFamily="@font/montserrat_regular"
            android:padding="16dp"
            android:text="@string/history_text"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:drawableStartCompat="@drawable/ic_cart_history" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_change_password_contain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:padding="16dp"
        app:cardBackgroundColor="@color/md_theme_light_primary"
        app:cardCornerRadius="8dp"
        app:layout_constraintTop_toBottomOf="@id/cv_history_contain">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawablePadding="8dp"
            android:fontFamily="@font/montserrat_regular"
            android:padding="16dp"
            android:text="@string/change_password_text"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:drawableStartCompat="@drawable/ic_setting" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_logout_contain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:padding="16dp"
        app:cardBackgroundColor="@color/md_theme_light_primary"
        app:cardCornerRadius="8dp"
        app:layout_constraintTop_toBottomOf="@id/cv_change_password_contain">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawablePadding="8dp"
            android:fontFamily="@font/montserrat_regular"
            android:padding="16dp"
            android:text="@string/logout_text"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:drawableStartCompat="@drawable/ic_logout" />

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tv_version_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/version"
        android:textAlignment="center"
        android:textColor="@color/md_theme_light_primary"
        android:textSize="12sp"
        app:layout_constraintTop_toBottomOf="@id/cv_logout_contain" />

</androidx.constraintlayout.widget.ConstraintLayout>