<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/md_theme_light_background"
    android:padding="16dp">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/mcv_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="12dp"
        app:cardCornerRadius="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.SearchView
            android:id="@+id/sv_course"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_regular"
            android:layoutDirection="rtl"
            app:iconifiedByDefault="false"
            app:queryBackground="@android:color/transparent"
            app:queryHint="@string/txt_search_best_course"
            app:searchIcon="@drawable/ic_searching">

        </androidx.appcompat.widget.SearchView>

    </com.google.android.material.card.MaterialCardView>


    <TextView
        app:layout_constraintStart_toStartOf="parent"
        android:id="@+id/tv_class_topic_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="8dp"
        android:fontFamily="@font/montserrat_bold"
        android:shadowColor="@color/md_theme_light_outline"
        android:shadowDx="1"
        android:shadowDy="1"
        android:shadowRadius="2"
        android:text="@string/txt_running_class"
        android:textColor="@color/md_theme_light_primary"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@id/fl_type_of_class"
        app:layout_constraintTop_toBottomOf="@id/mcv_search" />

    <com.google.android.flexbox.FlexboxLayout
        android:id="@+id/fl_type_of_class"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:alignContent="stretch"
        app:alignItems="stretch"
        app:flexDirection="row"
        app:flexWrap="wrap"
        app:justifyContent="space_between"
        app:layout_constraintBottom_toTopOf="@id/rv_list_of_class"
        app:layout_constraintTop_toBottomOf="@id/tv_class_topic_text">

        <TextView
            android:id="@+id/tv_all_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/background_rounded"
            android:fontFamily="@font/montserrat_regular"
            android:text="@string/txt_all"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_flexBasisPercent="30%" />

        <TextView
            android:id="@+id/tv_progress_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/background_rounded"
            android:fontFamily="@font/montserrat_regular"
            android:text="@string/progress_class"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_flexBasisPercent="30%" />

        <TextView
            android:id="@+id/tv_done_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/background_rounded"
            android:fontFamily="@font/montserrat_regular"
            android:text="@string/done_class"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_flexBasisPercent="30%" />
    </com.google.android.flexbox.FlexboxLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_list_of_class"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fl_type_of_class"
        tools:listitem="@layout/my_class_item" />
</androidx.constraintlayout.widget.ConstraintLayout>